; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_auth_unix.c_authunix_ops.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_auth_unix.c_authunix_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_ops = type { i8*, i8*, i32, i32, i32, i32, i32* }

@authunix_ops.ops = internal global %struct.auth_ops zeroinitializer, align 8
@ops_lock = external dso_local global i32, align 4
@authunix_nextverf = common dso_local global i32* null, align 8
@authunix_marshal = common dso_local global i32 0, align 4
@authunix_validate = common dso_local global i32 0, align 4
@authunix_refresh = common dso_local global i32 0, align 4
@authunix_destroy = common dso_local global i32 0, align 4
@authunix_wrap = common dso_local global i8* null, align 8
@authunix_unwrap = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.auth_ops* ()* @authunix_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.auth_ops* @authunix_ops() #0 {
  %1 = call i32 @mutex_lock(i32* @ops_lock)
  %2 = load i32*, i32** getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 6), align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i32*, i32** @authunix_nextverf, align 8
  store i32* %5, i32** getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 6), align 8
  %6 = load i32, i32* @authunix_marshal, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 5), align 4
  %7 = load i32, i32* @authunix_validate, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 4), align 8
  %8 = load i32, i32* @authunix_refresh, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 3), align 4
  %9 = load i32, i32* @authunix_destroy, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 2), align 8
  %10 = load i8*, i8** @authunix_wrap, align 8
  store i8* %10, i8** getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 1), align 8
  %11 = load i8*, i8** @authunix_wrap, align 8
  store i8* %11, i8** getelementptr inbounds (%struct.auth_ops, %struct.auth_ops* @authunix_ops.ops, i32 0, i32 0), align 8
  br label %12

12:                                               ; preds = %4, %0
  %13 = call i32 @mutex_unlock(i32* @ops_lock)
  ret %struct.auth_ops* @authunix_ops.ops
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
